fix(admin): make role migration and CSP production-safe